kubernetes/aks/apps/fertiscan/base/fertiscan-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fertiscan-backend
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: fertiscan-backend
  template:
    metadata:
      labels:
        app: fertiscan-backend
      annotations:
        instrumentation.opentelemetry.io/inject-python: "true"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - fertiscan-backend
              topologyKey: "kubernetes.io/hostname"
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/role
                    operator: In
                    values:
                      - agent
      containers:
        - name: fertiscan-backend
          image: ghcr.io/ai-cfia/fertiscan-backend:185-as-a-devops-i-want-to-make-sure-auto-instrumentation-is-fully-functional
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: logs
              mountPath: /app/logs
            - name: uploads
              mountPath: /app/uploads
            - name: tmp
              mountPath: /cachedir_joblib
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: false
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: tmp
          emptyDir: {}
        - name: logs
          persistentVolumeClaim:
            claimName: fertiscan-logs-pvc
        - name: uploads
          persistentVolumeClaim:
            claimName: fertiscan-uploads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: fertiscan-backend-svc
spec:
  clusterIP: None
  selector:
    app: fertiscan-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: api
