kubernetes/aks/apps/fertiscan/base/fertiscan-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fertiscan-frontend
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: fertiscan-frontend
  template:
    metadata:
      labels:
        app: fertiscan-frontend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - fertiscan-frontend
              topologyKey: "kubernetes.io/hostname"
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/role
                    operator: In
                    values:
                      - agent
      containers:
        - name: fertiscan-frontend
          image: ghcr.io/ai-cfia/fertiscan-frontend:251
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 10
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          # resources:
          #   requests:
          #     cpu: "250m"
          #     memory: "512Mi"
          #   limits:
          #     cpu: "500m"
          #     memory: "1Gi"

---
apiVersion: v1
kind: Service
metadata:
  name: fertiscan-frontend-svc
spec:
  clusterIP: None
  selector:
    app: fertiscan-frontend
  ports:
    - protocol: TCP
      port: 3000
