kubernetes/aks/apps/fertiscan/base/fertiscan-database.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fertiscan-pgsql-ingress
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 205.194.32.0/24,10.244.0.0/16,192.197.71.0/24
    external-dns.alpha.kubernetes.io/target: inspection.alpha.canada.ca
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/client_max_body_size: "200m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - fertiscan-pgsql.inspection.alpha.canada.ca
      secretName: fertiscan-pgsql-tls
  rules:
    - host: fertiscan-pgsql.inspection.alpha.canada.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fertiscan-pgsql-cluster-rw
                port:
                  number: 5432
